--- a/app/views/fields/aasm/_show.html.erb
+++ b/app/views/fields/aasm/_show.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <% field.events.each do |event| %>
     <div class="col-md-2">
-      <%= link_to event.name.to_s.humanize, "/admin/#{controller.controller_name}/#{field.id}/#{event.name.to_s}", method: :put, data: { confirm: "#{event.name}?"}, class: 'btn btn-success btn-block' %>
+      <%= link_to event.name.to_s.humanize, "/admin/#{controller.controller_name}/#{field.token}/#{event.name.to_s}", method: :put, data: { confirm: "#{event.name}?"}, class: 'btn btn-success btn-block' %>
     </div>
   <% end %>
 </div>
