--- a/app/views/fields/aasm/_show.html.erb
+++ b/app/views/fields/aasm/_show.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-  <% field.events(field.attribute).each do |event| %>
+  <% field.events(field.to_s).each do |event| %>
     <div class="col-md-2">
       <%= link_to event.name.to_s.humanize, "/admin/#{controller.controller_name}/#{field.id}/#{event.name.to_s}", method: :put, data: { confirm: "#{event.name}?"}, class: 'btn btn-success btn-block' %>
     </div>
